Added routes using Dijkstra

--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
 
 <body>
     <div class="wrapper">
-        <h2 class="title">Choose your itinerary</h2>
-        <form action="calculate-trip.php" method="GET">
+        <form action="test.php" method="GET">
+
+            <!-- <input type="text" placeholder="From..." name="from2" class="searchField"> -->
+            <!-- <input type="text" placeholder="To..." name="to2" class="searchField"> -->
             <input type="submit" id="calculate-btn" value="Calcola">
 
-            <p>From: </p>
+            <!-- <div class="transportation">
+                <p>Means of transportation</p>
+                <input type="checkbox" name="bus" value="bus" /> Bus
+                <br>
+                <input type="checkbox" name="train" value="train" /> Train
+                <br>
+                <input type="checkbox" name="airplane" value="airplane" /> Airplane
+            </div> -->
+
+            <!-- <p>From: </p>
             <select name="from" class="select">
                 <option>New York</option>
                 <option>Philadelphia</option>
@@ -52,7 +63,8 @@
                 <br>
                 <input type="radio" name="mode" value="cheapest" /> Cheapest
                 <br>
-            </fieldset>
+            </fieldset> -->
+        </form>
     </div>
 </body>
 
