--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>East Cost Trip</title>
 </head>
 
 <body>
+    
     <div class="wrapper">
-        <form action="test.php" method="GET">
+        <canvas id="mapCanvas" width="600" height="400"></canvas>
+        <script src="scripts/map.js"></script>
 
-            <!-- <input type="text" placeholder="From..." name="from2" class="searchField"> -->
-            <!-- <input type="text" placeholder="To..." name="to2" class="searchField"> -->
+        <form action="calculate-trip.php" method="GET"> 
+            <input type="text" placeholder="From..." name="from" class="searchField">
+            <input type="text" placeholder="To..." name="to" class="searchField">
             <input type="submit" id="calculate-btn" value="Calcola">
 
             <!-- <div class="transportation">
