Changes to frontpage

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <canvas id="mapCanvas" width="600" height="400"></canvas>
         <script src="scripts/map.js"></script>
 
-        <form action="calculate-trip.php" method="GET"> 
-            <input type="text" placeholder="From..." name="from" class="searchField">
-            <input type="text" placeholder="To..." name="to" class="searchField">
+        <form action="calculate-trip.php" method="GET" class="main-form">
+            <input type="text" placeholder="From..." name="from" class="search-field">
+            <input type="text" placeholder="To..." name="to" class="search-field">
             <input type="submit" id="calculate-btn" value="Calcola">
 
             <!-- <div class="transportation">
