--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>East Coast Trip</title>
 </head>
@@ -24,9 +25,9 @@
     <div class="hero">
         <div class="darker">
             <form action="calculate-trip.php" method="GET" class="main-form">
-                <h3 class="form-title">Chose your trip</h3>
+                <h3 class="form-title">Where do you want to go?</h3>
                 <select name="from" class="search-field">
-                        <option value="" disabled selected>From...</option>
+                    <option value="" disabled selected>From...</option>
                     <option>New York</option>
                     <option>Philadelphia</option>
                     <option>Washington</option>
@@ -36,7 +37,7 @@
                     <option>Chicago</option>
                 </select>
                 <select name="to" class="search-field">
-                        <option value="" disabled selected>To...</option>
+                    <option value="" disabled selected>To...</option>
                     <option>New York</option>
                     <option>Philadelphia</option>
                     <option>Washington</option>
@@ -54,17 +55,33 @@
 
                 <div class="transportation">
                     <p>Means of transportation</p>
-                    <input type="checkbox" name="bus" value="bus" /> Bus
+                    <input type="checkbox" name="bus" value="bus" />
+                    <span class="fa fa-bus"></span> Bus
                     <br>
-                    <input type="checkbox" name="train" value="train" /> Train
+                    <input type="checkbox" name="train" value="train" />
+                    <span class="fa fa-subway"></span> Train
                     <br>
-                    <input type="checkbox" name="airplane" value="airplane" /> Airplane
+                    <input type="checkbox" name="airplane" value="airplane" />
+                    <span class="fa fa-plane"></span> Airplane
                 </div>
 
-                <input type="submit" id="calculate-btn" value="Calcola">
+                <input type="submit" id="calculate-btn" value="Calculate">
             </form>
+            <div class="bullets">
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+            </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
