--- a/index.html
+++ b/index.html
@@ -5,70 +5,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="styles/style.css">
-    <title>East Cost Trip</title>
+    <title>East Coast Trip</title>
 </head>
 
 <body>
-    
-    <div class="wrapper">
-        <canvas id="mapCanvas" width="600" height="400"></canvas>
-        <script src="scripts/map.js"></script>
+    <nav class="navbar">
+        <div class="wrapper">
+            <h2 class="logo">East Coast Trip</h2>
+            <div class="list">
+                <a href="index.html" class="item">Home</a>
+                <a href="destinations.html" class="item">Destinations</a>
+                <a href="about.html" class="item">About</a>
+            </div>
+        </div>
+    </nav>
 
-        <form action="calculate-trip.php" method="GET" class="main-form">
-            <input type="text" placeholder="From..." name="from" class="search-field">
-            <input type="text" placeholder="To..." name="to" class="search-field">
-            <input type="submit" id="calculate-btn" value="Calcola">
+    <div class="hero">
+        <div class="darker">
+            <form action="calculate-trip.php" method="GET" class="main-form">
+                <h3 class="form-title">Where do you want to go?</h3>
+                <select name="from" class="search-field">
+                    <option value="" disabled selected>From...</option>
+                    <option>New York</option>
+                    <option>Philadelphia</option>
+                    <option>Washington</option>
+                    <option>New Orleans</option>
+                    <option>Los Angeles</option>
+                    <option>Seattle</option>
+                    <option>Chicago</option>
+                </select>
+                <select name="to" class="search-field">
+                    <option value="" disabled selected>To...</option>
+                    <option>New York</option>
+                    <option>Philadelphia</option>
+                    <option>Washington</option>
+                    <option>New Orleans</option>
+                    <option>Los Angeles</option>
+                    <option>Seattle</option>
+                    <option>Chicago</option>
+                </select>
+                <select name="type" class="search-field">
+                    <option value="" disabled selected>Type...</option>
+                    <option>Fastest</option>
+                    <option>Most scenic</option>
+                    <option>Cheapest</option>
+                </select>
 
-            <!-- <div class="transportation">
-                <p>Means of transportation</p>
-                <input type="checkbox" name="bus" value="bus" /> Bus
-                <br>
-                <input type="checkbox" name="train" value="train" /> Train
-                <br>
-                <input type="checkbox" name="airplane" value="airplane" /> Airplane
-            </div> -->
+                <div class="transportation">
+                    <p>Means of transportation</p>
+                    <input type="checkbox" name="bus" value="bus" />
+                    <span class="fa fa-bus"></span> Bus
+                    <br>
+                    <input type="checkbox" name="train" value="train" />
+                    <span class="fa fa-subway"></span> Train
+                    <br>
+                    <input type="checkbox" name="airplane" value="airplane" />
+                    <span class="fa fa-plane"></span> Airplane
+                </div>
 
-            <!-- <p>From: </p>
-            <select name="from" class="select">
-                <option>New York</option>
-                <option>Philadelphia</option>
-                <option>Washington</option>
-                <option>New Orleans</option>
-                <option>Los Angeles</option>
-                <option>Seattle</option>
-                <option>Chicago</option>
-            </select>
-
-            <p>Means of transportation</p>
-            <input type="checkbox" name="bus" value="bus" /> Bus
-            <br>
-            <input type="checkbox" name="train" value="train" /> Train
-            <br>
-            <input type="checkbox" name="airplane" value="airplane" /> Airplane
-            <br>
-
-            <p>To: </p>
-            <select name="to">
-                <option>New York</option>
-                <option>Philadelphia</option>
-                <option>Washington</option>
-                <option>New Orleans</option>
-                <option>Los Angeles</option>
-                <option>Seattle</option>
-                <option>Chicago</option>
-            </select>
-
-            <fieldset>
-                <input type="radio" name="mode" value="fastest" /> Fastest
-                <br>
-                <input type="radio" name="mode" value="most-scenic" /> Most scenic
-                <br>
-                <input type="radio" name="mode" value="cheapest" /> Cheapest
-                <br>
-            </fieldset> -->
-        </form>
+                <input type="submit" id="calculate-btn" value="Calculate">
+            </form>
+            <div class="bullets">
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+                <div class="bullet"></div>
+            </div>
+        </div>
     </div>
+
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" -->
+        <!-- crossorigin="anonymous"></script> -->
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
